# RedcapLite

./: AGENTS.md  CHANGELOG.md  NEWS.md  README.md  build_backend.py  pyproject.toml  setup.py
.github/workflows/: pytest-pr.yml  python-app.yml
RedcapLite/: __init__.py  redcap.py
RedcapLite/api/: __init__.py  arm.py  dag.py  event.py  field_names.py  file.py  file_repository.py  form_event_mapping.py  instrument.py  log.py  metadata.py  pdf.py  project.py  user_dag_mapping.py
RedcapLite/http/: __init__.py  client.py  handler.py
redcaplite/: redcap.py
redcaplite/api/: arm.py  dag.py  event.py  field_names.py  file.py  file_repository.py  form_event_mapping.py  instrument.py  metadata.py  project.py  record.py  repeating_forms_events.py  schemas.py  user.py  user_dag_mapping.py  user_role.py  user_role_mapping.py  utils.py
redcaplite/auth/: __init__.py  store.py
redcaplite/cli/: __init__.py  access.py  arms.py  events.py  files.py  helpers.py  main.py  metadata.py  output.py  parsers.py  profiles.py  project.py  prompts.py  records.py  registry.py  setup.py  survey.py  sync.py  users.py
redcaplite/config/: __init__.py  profiles.py
redcaplite/http/: __init__.py  client.py  handler.py
redcaplite/metadata_ops/: __init__.py  transform.py  validate.py
tests/: test_api_arm.py  test_auth_store.py  test_cli.py  test_metadata_transform.py  test_profiles.py  test_redcap.py  test_redcap_server.py
tests/api/: test_arm.py  test_dag.py  test_event.py  test_field_names.py  test_file.py  test_user.py  test_user_dag_mapping.py  (+1 more)
yaml/: __init__.py
(+20 files in other folders)
