[project]
name = "redcaplite"
version = "2.1.0"
authors = [
  { name="Jubilee Tan", email="jubilee2@gmail.com" },
]
description = "A Python client for REDCap with integrated CLI support"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "keyring",
    "pandas>=3.0",
    "pyyaml",
    "requests",
]

[project.scripts]
rcl = "redcaplite.cli.main:main"

[project.urls]
Homepage = "https://github.com/jubilee2/RedcapLite"
Issues = "https://github.com/jubilee2/RedcapLite/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
